# netcorex-modelswitch

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
docs/: README.md
docs/adr/: 0001-repository-bootstrap.md
docs/architecture/: overview.md
docs/roadmap/: initial-roadmap.md
scripts/: bootstrap-dev.sh
src/netcorex_modelswitch/agents/: __init__.py  registry.py
src/netcorex_modelswitch/channels/telegram/: __init__.py  adapter.py  client.py  runtime.py
src/netcorex_modelswitch/cli/: run.py  telegram_poll.py  usage_report.py
src/netcorex_modelswitch/config/: settings.py
src/netcorex_modelswitch/contracts/: __init__.py  models.py
src/netcorex_modelswitch/execution/: __init__.py  runner.py
src/netcorex_modelswitch/intent/: analyzer.py
src/netcorex_modelswitch/orchestrator/: __init__.py  planner.py
src/netcorex_modelswitch/policies/: __init__.py  routing.py
src/netcorex_modelswitch/providers/: base.py  ollama.py  openai_provider.py
src/netcorex_modelswitch/reporting/: __init__.py  usage.py
src/netcorex_modelswitch/router/: __init__.py  engine.py
src/netcorex_modelswitch/telemetry/: __init__.py  events.py  logger.py
tests/unit/: test_cli_run.py  test_contracts.py  test_execution_runner.py  test_intent.py  test_ollama_provider.py  test_openai_provider.py  test_orchestrator.py  test_policy.py  test_router.py  test_telegram_adapter.py  test_telegram_runtime.py  test_telemetry_logger.py  test_usage_report.py
